Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/capture/Capture2.out
Capture2.java:17:23: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.captureof: 1, ?, T)
1 error
